# pbqp-papa

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  Makefile  README.md
include/: CInterface.h  CMakeLists.txt  FullSolver.hpp  StepByStepSolver.hpp
include/analysis/: MinimalSolutionChecker.hpp  PBQPHandler.hpp  SolutionAmountChecker.hpp  SumUpGenerator.hpp
include/debug/: DebugTimer.hpp  GraphVisualizer.hpp  StatKeeper.hpp
include/generate/: PBQPGenerator.hpp
include/graph/: DummySolution.hpp  Matrix.hpp  PBQPEdge.hpp  PBQPGraph.hpp  PBQPNode.hpp  PBQPSolution.hpp  PBQP_Edge.hpp  PBQP_Graph.hpp  PBQP_Node.hpp  PBQP_Solution.hpp  Vector.hpp  Vektor.hpp
include/io/: PBQP_Serializer.hpp  TypeSerializer.hpp  TypeSerializerFactory.hpp  TypeSerializers.hpp
include/io/types/: DoubleSerializer.hpp  FloatSerializer.hpp  InfinityWrapperSerializer.hpp  UnsignedCharSerializer.hpp  UnsignedLongIntSerializer.hpp  UnsignedShortIntSerializer.hpp
include/math/: BranchBoundSolver.hpp  GurobiConverter.hpp  InfinityWrapper.hpp
include/reduction/: ConnectedComponentSeparator.hpp  DegreeOneReductor.hpp  DegreeZeroReductor.hpp  DependentSolution.hpp  Dependent_Solution.hpp  EdgeDeduplicator.hpp  InfinityFilter.hpp  NodeConsistentReduction.hpp  NodeMerger.hpp  PBQPReduction.hpp  SelfCycleRemover.hpp  VektorDegreeZeroReductor.hpp
include/reduction/degree/: DegreeOneReducer.hpp  DegreeOneReductor.hpp  DegreeTwoReducer.hpp  DegreeTwoReductor.hpp  DegreeZeroReducer.hpp  DegreeZeroReductor.hpp
include/reduction/heuristic/: DegreeNReductor.hpp
include/reduction/solutions/: DependentSolution.hpp  ImmediateSolution.hpp  NtoNDependentSolution.hpp  OnetoOneDependentSolution.hpp  TwoToOneDependentSolution.hpp
include/reduction/vectordegree/: VectorDegreeOneReducer.hpp  VectorDegreeOneReductor.hpp  VectorDegreeZeroReducer.hpp  VectorDegreeZeroReductor.hpp  VektorDegreeOneReductor.hpp  VektorDegreeZeroReductor.hpp
include/reduction/vektordegree/: VektorDegreeOneReductor.hpp  VektorDegreeZeroReductor.hpp
include/shell/: CheckSolvableCommand.hpp  Command.hpp  CommandHandler.hpp  DumpCommand.hpp  FullySolveCommand.hpp  InfoCommand.hpp  LoadCommand.hpp  StepBackwardCommand.hpp  StepForwardCommand.hpp  StopCommand.hpp  VisualizeCommand.hpp
include/solve/: BruteForceSolver.hpp  PBQPSolver.hpp  StepByStepSolver.hpp  UnsolvablePBQPException.hpp
include/util/: TestUtils.hpp
include/validation/: MatrixDimensionCheck.hpp  PBQPValidator.hpp
scripts/: test.sh
src/: CInterface.cpp  CMakeLists.txt  InfinityWrapper.cpp  pbqp-papa.cpp
src/debug/: DebugTimer.cpp  StatKeeper.cpp
src/graph/: Matrix.cpp  PBQP_Edge.cpp  PBQP_Graph.cpp  PBQP_Node.cpp  PBQP_Solution.cpp  Vektor.cpp
src/io/: TypeSerializerFactory.cpp  TypeSerializers.cpp
src/io/int/: UnsignedCharSerializer.cpp  UnsignedLongIntSerializer.cpp  UnsignedShortIntSerializer.cpp
src/io/types/: UnsignedCharSerializer.cpp  UnsignedLongIntSerializer.cpp  UnsignedShortIntSerializer.cpp
src/reduction/: DegreeZeroReductor.cpp  Dependent_Solution.cpp  EdgeDeduplicator.cpp  PBQPReduction.cpp  SelfCycleRemover.cpp
src/validation/: MatrixDimensionCheck.cpp  PBQPValidator.cpp
submodules/: CMakeLists.txt
test/: CMakeLists.txt  DebugDummy.cpp  GraphTests.cpp
test/debug/: GraphVisualizerTests.cpp  ShellTest.cpp
test/graph/: GraphTests.cpp  MatrixTests.cpp  PBQPSolutionTests.cpp
test/io/: PBQP_SerializerTests.cpp  PerformanceTest.cpp
test/math/: GurobiConverterTest.cpp  InfinityWrapperTests.cpp
test/reduction/: ConnectedComponentSeparatorTests.cpp  DegreeOneReducerTests.cpp  DegreeOneReductorTests.cpp  DegreeTwoReducerTests.cpp  DegreeTwoReductorTests.cpp  DegreeZeroReducerTests.cpp  DegreeZeroReductorTests.cpp  InfinityFilterTests.cpp  SelfCycleRemoverTests.cpp
test/solve/: BruteForceSolverTests.cpp  StepByStepSolverTest.cpp
test/testData/: bigLibfirmGraph.json  noLongerFine.json  normalLibfirmGraph.json  problematic.c  problematic.json  smallLibfirmGraph.json  stillFine.json
test/testData/size100/: 1550124800148524288.json  1550124800169896976.json  1550124816521159084.json  1550124821110782832.json  1550124824312228300.json  1550124824331870636.json  1550124830539936684.json  1550124834708185994.json  1550124834767147304.json  1550124834787078884.json  1550124834807099652.json  1550124834827445073.json  1550124836157582146.json
test/testData/size2000/: 1550730639501760143.json  1550730645248108986.json  1550730648684305365.json  1550730663906439884.json  1550730667923143192.json  1550730675421378953.json
test/testData/size500/: 1550126201628923407.json  1550126207372045895.json  1550126212555426475.json  1550126222094014047.json  1550126222619616984.json  1550126223443179231.json  1550126229395515636.json  1550126229637291343.json  1550126233222547986.json  1550126233559716561.json  1550126233895128058.json  1550126243775764426.json  1550126246007691794.json  1550126247688582715.json  1550126250503147247.json
